NT/ds/security/cryptoapi/pkitrust/tests/signing/bad/b_dig.ocx
version https://git-lfs.github.com/spec/v1
oid sha256:40cf98e9eab8b9ead01342a5f66b628cf11d039656296b476bf69ea691f9148f
size 511456
